Fix layout shift due to scrollbar visible/invisible

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -205,7 +205,7 @@
   background-color: #140C2C;
   padding: 20px;
   border-radius: 8px;
-  width: 80%;
+  width: 70%;
   z-index: 21;
   display: flex;
   padding: 20px;
